--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
     "react": "^18.0.0",
-    "react-bootstrap": "^2.4.0",
-    "react-dom": "^18.0.0",
-    "recoil": "^0.7.3-alpha.2"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
